SSC-XX cruise page, header, fix feature icon spacing

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-general.less
@@ -155,9 +155,13 @@
     .meta_feature_inner {
         display: inline-block;
         position: relative;
-        margin: 0 8px 0 0;
+        margin: 0 6px 0 0;
         font-size: 14px;
         bottom: 4px;
+
+        &:last-child {
+            margin: 0;
+        }
     }
 }
 
